--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
       # 打包静态文件
       - name: Build
         env:
-          APP_BASE_PATH: /skittle-wuse.github.io/chouchouserver/nav
+          APP_BASE_PATH: /
         run: pnpm install && pnpm run build
 
       # 部署
